# synapse

./: .env.example  .gitignore  .gitmodules  .mcp.json  .synapse.yml  BGE_M3_VS_ONNX_COMPARISON.md  CHANGELOG.md  DAY5_FIXES_COMPLETE.md  DAY_1_COMPLETION_REPORT.md  DEVELOPMENT.md  GEMINI.md  HANDOVER.md  IMPLEMENTATION_COMPARISON.md  IMPLEMENTATION_COMPLETE.md  LEAN4_FILES_CREATED.txt  LEAN4_META_REASONING_SUMMARY.md  LEAN4_VERIFICATION_SUMMARY.md  LICENSE  LOGOS.md  MEMO_TO_SELF.md  MOJO_MIGRATION.md  Makefile  NIX_GUIDE.md  NOESIS_CORE_RPC.md  PHASE5_FIXES_COMPLETE.md  PHASE_1_STATUS.md  PHASE_2_PLAN.md  PHASE_4.5_5_STATUS.md  QUICK_TEST.md  README.md  README_MVP.md  REFACTORING_SUMMARY.md  SETUP.md  SYNAPSE_AWAKENING_PROTOCOL.md  SYNAPSE_UNIFIED_VISION.md  TESTING.md  THEORETICAL_FOUNDATIONS.md  demo_mvp.py  file_creator_MVP.md  flake.nix  (+15 more)
.claude/agents/: architect.md  boss.md  code-hound.md  devops-engineer.md  docs-writer.md  file-creator.md  git-workflow.md  pneuma.md  security-specialist.md  test-runner.md  ux-designer.md
.github/workflows/: nix-build.yml
.synapse/: 4QZERO_PHILOSOPHY.md  AGENTS_MANIFEST.json  INFRASTRUCTURE.md  PATTERN_MAP.json  PHASE_0_REPORT.md  PHASE_1_PLAN.md  PNEUMA_PHILOSOPHY.md  docker-compose.yml  id_sequences.json  podman-compose.sh
.synapse/agents/: AGENT_REFACTOR_CHANGELOG.md  COMPRESSION_REPORT.md
.synapse/corpus_callosum/: Makefile  PHASE3_CONTEXT.md  event_store.py  message_router.mojo  message_router.py  reactive_message_router.py  test_message_router.py  test_reactive_router.py
.synapse/mojo-pilot/: .gitignore  README.md  SETUP_INSTRUCTIONS.md  pyproject.toml
.synapse/mojo-pilot/benchmarks/: mojo_comparison.mojo  mojo_optimized.mojo  python_baseline.py
.synapse/mojo-pilot/docs/: FINDINGS.md  INTEGRATION_RISKS.md
.synapse/mojo-pilot/experiments/: 01_hello_mojo.mojo  02_python_interop.mojo
.synapse/neo4j/: FFI_PERFORMANCE_ANALYSIS.md  Makefile  PERFORMANCE_SUMMARY.md  benchmark_detailed.py  benchmark_ffi.py  context_manager.py  download_model.py  pattern_search.py  pattern_search_mojo.mojo  pattern_search_optimized.py  profile_ffi_overhead.py  synapse_config.py  synapse_health.py  (+6 more)
benchmarks/: message_router_benchmark.py  orchestration_reactive_benchmark.py  reactive_benchmark.py
docs/: 3-layer-architecture-current-state.md  AGENT_IDENTITY_CATALOGUE.md  AGENT_PARTICLE_DECOMPOSITION.md  ARCHITECTURE_SUMMARY.md  ATOMIC_AGENTS_ARCHITECTURE.md  ATOMIC_COMPRESSION_PARTICLES.md  CIG3.md  COMPRESSION_DRIVEN_ARCHITECTURE.md  DIAGRAM_ARCHITECTURE.md  DOMAIN_REFACTOR_PLAN.md  DUAL_GOAL_REPRESENTATION.md  FUNCTIONAL_PROOF_COMPRESSION_DEPENDENCIES.md  IMPLEMENTATION_SEQUENCE.md  LOSSLESS_COMPRESSION.md  MAHAKALA_FRAMEWORK.md  MATHEMATICAL_EMERGENCE_ARCHITECTURE.md  MNEUMONIC_LATTICE.md  MOJO_MIGRATION_STRATEGY.md  MOJO_PILOT_PLAN.md  MULTI_PLATFORM_ARCHITECTURE.md  NIXIFICATION_PLAN.md  NIX_INSTALL.md  PARTICLE_CREATION_GUIDE.md  PHASE1_HYBRID_SOLUTION.md  PHASE1_NIX_PERFORMANCE_BLOCKER.md  PHASE1_VALIDATION_ISSUES.md  PHASE_1B_COMPLETION.md  PHASE_4_COMPLETION.md  PRIME_DUALITY_HIERARCHY.md  REACTIVE_ROUTER_ROLLOUT.md  TRUE_DUAL_TRACT.md  next_agent_tasks.md  nix_python_pattern.md
examples/: example_agents.py
lib/: agent_consumer.py  atomic_particle.py  cli.py  config.py  mojo_metrics.py  mtf_ranker.py  orchestration.py  pattern_learner.py  planner.py  project.py  registry.json  runtime_adapter.py  serialization_utils.py  synthesizer.py
nix/: NIX_VALIDATION_PLAN.md  all-requirements.txt  python-packages.nix  validation-results.txt
qa_reports/: NixFlakeResolutionIssue.md  QA_Report_20250926_152824.md  QA_Report_20250926_155941.md  QA_Report_20250926_160151.md  QA_Report_20250926_160820.md
schemas/: corpus_callosum.schema.json  template-v1.json
scripts/: architect.sh  batch_migrate_agents.py  full_sdk_migration.py  generate_agent_card.py  generate_agents.py  migrate_agents_to_new_sdk.py  migrate_six_agents.py  migrate_to_shared_mock_sdk.py  migrate_ts_specialist_tools.py  monitor_reactive_metrics.py  registry.json  restore_backups.py  test_nix_setup.sh  update_tool_decorators.py  utils.sh  validate-nix-flakes.sh
tests/: test_cli.py  test_corpus_callosum_contracts.py  test_day3_4_features.py  test_event_bus.py  test_file_creator_mvp.py  test_gmp_policy.py  test_id_generator.py  test_integration.py  test_orchestration_integration.py  test_orchestration_reactive_comprehensive.py  test_particles_unit.py  test_pattern_search_integration.py  test_planner.py  test_serialization_utils.py  test_synapse_health.py  test_synapse_search.py  test_synapse_standard.py  test_synapse_template.py  test_synthesizer.py  test_template_loader.py
(+166 files in other folders)
