[project]
name = "no3sis"
version = "0.1.0"
description = "MCP server exposing Synapse Pattern Map knowledge to AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Synapse System Contributors"}
]

dependencies = [
    "mcp>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
no3sis = "no3sis.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/no3sis"]
