[project]
name = "synapse-mojo-pilot"
version = "0.1.0"
description = "Experimental Mojo integration for Synapse System - Isolated test environment"
requires-python = ">=3.12"
dependencies = [
    "redis>=4.5.0",
    "numpy>=1.24.0",
    "neo4j>=5.0.0",
    "requests>=2.28.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["benchmarks"]
python_files = ["test_*.py", "*_test.py", "benchmark_*.py"]